[project]
name = "instagram_posting_llm"
version = "0.1.0"
description = "instagram-posting-llm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
instagram_posting_llm = "instagram_posting_llm.main:run"
run_crew = "instagram_posting_llm.main:run"
train = "instagram_posting_llm.main:train"
replay = "instagram_posting_llm.main:replay"
test = "instagram_posting_llm.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
